objects/Qualtrics_Project__c.object
<CustomObject>
    <fields>
        <fullName>From_Email__c</fullName>
        <label>From Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>From_Name__c</fullName>
        <label>From Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Library_ID__c</fullName>
        <label>Library ID</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message_Id__c</fullName>
        <label>Message Id</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualtrics_User_Id__c</fullName>
        <label>Qualtrics User Id</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_ID__c</fullName>
        <label>Survey ID</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <label>Token</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Qualtrics Project</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Qualtrics Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Qualtrics Project</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>